syntax = "proto3";
package proto;
option go_package = "github.com/bdreece/hopper/pkg/proto";

import "google/protobuf/timestamp.proto";
import "device.proto";

message Event {
  string uuid = 1;
  google.protobuf.Timestamp timestamp = 2;
  string value = 3;

  uint32 device_id = 4;
  uint32 property_id = 5;
}

message Events { repeated Event events = 1; }

message CreateEventRequest {
  google.protobuf.Timestamp timestamp = 1;
  string value = 2;

  uint32 property_id = 3;
}

message CreateEventsRequest { repeated CreateEventRequest events = 1; }

message GetEventRequest {
  message GetEventByDeviceTimestamp {
    google.protobuf.Timestamp timestamp = 1;
    uint32 device_id = 2;
  }

  oneof where {
    string uuid = 1;
    GetEventByDeviceTimestamp device_timestamp = 2;
  }
}

message GetEventsRequest {
  message Where { GetDeviceRequest device = 1; }

  Where where = 1;
}