syntax = "proto3";
package proto;
option go_package = "github.com/bdreece/hopper/models/proto";

import "device.proto";
import "error.proto";
import "model.proto";

message Property {
  string uuid = 1;
  string name = 2;
  optional string description = 3;
  uint32 type_id = 3;
}

message PropertyResponse {
  oneof result {
    Property property = 1;
    Error error = 2;
  }
}

message PropertiesResponse {
  message Properties { repeated Property properties = 1; }

  oneof result {
    Properties properties = 1;
    Error error = 2;
  }
}

message CreatePropertyRequest {
  string name = 2;
  optional string description = 3;
  uint32 type_id = 3;
}

message GetPropertyRequest { uint32 id = 1; }

message GetPropertiesRequest {
  oneof where {
    GetDeviceRequest device = 1;
    GetModelRequest model = 2;
  }
}

message UpdatePropertyRequest {
  uint32 id = 1;
  optional string name = 2;
  optional string name = 3;
  optional uint32 type_id = 4;
}

message DeletePropertyRequest { uint32 id = 1; }

service PropertyService {
  rpc CreateProperty(CreatePropertyRequest) returns PropertyResponse;
  rpc GetProperty(GetPropertyRequest) returns PropertyResponse;
  rpc GetProperties(GetPropertiesRequest) returns PropertiesResponse;
  rpc UpdateProperty(UpdatePropertyRequest) returns PropertyResponse;
  rpc DeleteProperty(DeletePropertyRequest) returns PropertyResponse;
}